added banner to feauted section

--- a/index.html
+++ b/index.html
@@ -85,6 +85,66 @@
                 </div>
             </div>
         </div>
+        <!-- collection section start from here -->
+        <section class="max-w-xl md:max-w-md lg:max-w-full mx-auto px-8 md:px-16 lg:px-24 py-5 my-10">
+            <div class="text-center py-5">
+                <h1 class="font-extrabold text-3xl">Huge Collection</h1>
+                <p>Browse from a various collections</p>
+            </div>
+            <!-- card section start from here -->
+            <div class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-3">
+                <div class="card bg-base-100 shadow-xl image-full">
+                    <figure><img src="./images/hoodies.avif" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Clothes!</h2>
+                        <p>At DaisyMan, we believe that
+                            style is a reflection of your unique personality and our mission is to provide you with a
+                            deserve and trendy collection.</p>
+                        <div class="card-actions justify-end">
+                            <button class="btn rounded-full decoration-black font-extrabold uppercase">Explore</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-xl image-full">
+                    <figure><img src="./images/perfume.avif" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Perfumes!</h2>
+                        <p>At DaisyMan, we believe that
+                            style is a reflection of your unique personality and our mission is to provide you with a
+                            deserve and trendy collection.</p>
+                        <div class="card-actions justify-end">
+                            <button class="btn rounded-full decoration-black font-extrabold uppercase">Explore</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card  bg-base-100 shadow-xl image-full">
+                    <figure><img src="./images/shoes.avif" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Shoes!</h2>
+                        <p>At DaisyMan, we believe that
+                            style is a reflection of your unique personality and our mission is to provide you with a
+                            deserve and trendy collection.</p>
+                        <div class="card-actions justify-end">
+                            <button class="btn rounded-full decoration-black font-extrabold uppercase">Explore</button>
+                        </div>
+                    </div>
+                </div>    
+            </div>
+        </section>
+        <!-- featured section start from here -->
+        <section class="max-w-xl md:max-w-md lg:max-w-full mx-auto px-8 md:px-16 lg:px-24 py-5 my-10">
+            <div class="flex items-center flex-col md:flex-row gap-10">
+                <div class="flex-1">
+                    <h1 class="font-extrabold text-3xl mb-2">Easy Purchase</h1>
+                    <p>We believe that
+                        style is a reflection of your unique personality and our mission is to provide you with a
+                        deserve and trendy collection.</p>
+                </div>
+                <div class="flex-1">
+                    <img src="./images/easy-purchase.avif" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
