added footer section

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <button class="btn rounded-full decoration-black font-extrabold uppercase">Explore</button>
                         </div>
                     </div>
-                </div>    
+                </div>
             </div>
         </section>
         <!-- featured section start from here -->
@@ -145,9 +145,123 @@
                 </div>
             </div>
         </section>
+        <!-- top collection section start from here -->
+        <section class="max-w-xl md:max-w-md lg:max-w-full mx-auto px-8 md:px-16 lg:px-24 py-5 my-10">
+            <div class="text-center py-5">
+                <h1 class="font-extrabold text-3xl">Top Collection</h1>
+                <p>Browse from a various collections</p>
+            </div>
+            <!-- card section start from here -->
+            <div class="grid grid-cols-1 gap-5 md:grid-cols-3 lg:grid-cols-4">
+                <div class="card card-compact bg-base-100 shadow-xl">
+                    <figure><img
+                            src="./images/shiny-black-leather-shoes-exude-modern-luxury-generated-by-ai_188544-36154.avif">
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Formal Shoes</h2>
+                        <p>Our mission is to provide you with a
+                            deserve and trendy collection.</p>
+                        <div class="card-actions justify-end">
+                            <button class="btn bg-slate-100">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-compact bg-base-100 shadow-xl">
+                    <figure><img
+                            src="./images/elegant-businessman-shirt-wooden-desk-stack-generated-by-ai_188544-34678.avif">
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Formal Shirt</h2>
+                        <p>Our mission is to provide you with a
+                            deserve and trendy collection.</p>
+                        <div class="card-actions justify-end">
+                            <button class="btn bg-slate-100">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-compact bg-base-100 shadow-xl">
+                    <figure><img src="./images/blue-yellow-t-shirt-wooden-hanger-generated-by-ai_188544-42185.avif">
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Trendy T-Shirt</h2>
+                        <p>Our mission is to provide you with a
+                            deserve and trendy collection.</p>
+                        <div class="card-actions justify-end">
+                            <button class="btn bg-slate-100">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-compact bg-base-100 shadow-xl">
+                    <figure><img
+                            src="./images/elegant-businessman-attire-hangs-modern-closet-generated-by-ai_188544-15312.avif">
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Casual Shirt</h2>
+                        <p>Our mission is to provide you with a
+                            deserve and trendy collection.</p>
+                        <div class="card-actions justify-end">
+                            <button class="btn bg-slate-100">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- frequently question section start from here -->
+        <section class="max-w-xl md:max-w-md lg:max-w-full mx-auto px-8 md:px-16 lg:px-24 py-5 my-10">
+            <div class="text-center py-5">
+                <h1 class="font-extrabold text-3xl">Frequently Ask Questions</h1>
+                <p>Browse from a various collections</p>
+            </div>
+            <div class="collapse collapse-arrow bg-base-200">
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium">
+                    Click to open this one and close others
+                </div>
+                <div class="collapse-content">
+                    <p>hello</p>
+                </div>
+            </div>
+            <div class="collapse collapse-arrow bg-base-200">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                    Click to open this one and close others
+                </div>
+                <div class="collapse-content">
+                    <p>hello</p>
+                </div>
+            </div>
+            <div class="collapse collapse-arrow bg-base-200">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                    Click to open this one and close others
+                </div>
+                <div class="collapse-content">
+                    <p>hello</p>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="footer p-10 bg-neutral text-neutral-content">
+        <div>
+            <span class="footer-title">Services</span>
+            <a class="link link-hover">Branding</a>
+            <a class="link link-hover">Design</a>
+            <a class="link link-hover">Marketing</a>
+            <a class="link link-hover">Advertisement</a>
+        </div>
+        <div>
+            <span class="footer-title">Company</span>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Contact</a>
+            <a class="link link-hover">Jobs</a>
+            <a class="link link-hover">Press kit</a>
+        </div>
+        <div>
+            <span class="footer-title">Legal</span>
+            <a class="link link-hover">Terms of use</a>
+            <a class="link link-hover">Privacy policy</a>
+            <a class="link link-hover">Cookie policy</a>
+        </div>
     </footer>
 </body>
 
